Name the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,17 @@
 cmake_minimum_required (VERSION 2.6)
-project (CompileTest)
-add_executable (CompileTest compile-test.c)
+project (StereoscopicTest)
+
+# Version number
+set (SST_VERSION_MAJOR 0)
+set (SST_VERSION_MINOR 1)
+
+# Configure a header file to pass some of the CMake settings to the source code
+configure_file (
+	"${PROJECT_SOURCE_DIR}/config.h.in"
+	"${PROJECT_BINARY_DIR}/config.h"
+)
+
+# Add the binary tree to the search path for include files so that we will find config.h
+include_directories("${PROJECT_BINARY_DIR}")
+
+add_executable (stereoscopic-test stereoscopic-test.c)
