Implement perspective camera

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ option(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
 # Version number
 set (SST_VERSION_MAJOR 0)
-set (SST_VERSION_MINOR 4)
+set (SST_VERSION_MINOR 5)
 set (SST_TITLE "StereoscopicTest")
 
 # Configure a header file to pass some of the CMake settings to the source code
@@ -18,15 +18,22 @@ configure_file (
 include_directories ("${PROJECT_BINARY_DIR}")
 
 set (SOURCES
+	src/Window.h
 	src/Window.cpp
+	src/Model.h
 	src/Model.cpp
+	src/Quad.h
 	src/Quad.cpp
+	src/ShaderProgram.h
 	src/ShaderProgram.cpp
+	src/Framebuffer.h
 	src/Framebuffer.cpp
+	src/Camera.h
+	src/Camera.cpp
 	src/Main.cpp)
 
 add_executable (stereoscopic-test ${SOURCES})
 
-find_package (glfw3 3.2 REQUIRED)
+find_package(OpenGL REQUIRED)
 
-target_link_libraries (stereoscopic-test GL GLEW glfw)
+target_link_libraries (stereoscopic-test glew32s glfw3)
