--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required (VERSION 2.8)
 project (StereoscopicTest)
 
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/cmake")
+message("Searching modules in ${CMAKE_MODULE_PATH}")
+
 option (CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 
 # Version number
@@ -13,8 +16,17 @@ configure_file (
 	"${PROJECT_SOURCE_DIR}/src/Config.h.in"
 	"${PROJECT_SOURCE_DIR}/include/Config.h")
 
+find_package (OpenGL REQUIRED)
+find_package (GLEW REQUIRED)
+find_package (GLFW REQUIRED)
+find_package (SDL2 REQUIRED)
+
 # Add the given directories to those the compiler uses to search for include files
 include_directories (
+	"${OPENGL_INCLUDE_DIR}"
+	"${GLEW_INCLUDE_DIR}"
+	"${GLFW_INCLUDE_DIR}"
+	"${SDL2_INCLUDE_DIR}"
 	"${PROJECT_SOURCE_DIR}/include"
 	"${PROJECT_SOURCE_DIR}/shader")
 
@@ -61,8 +73,27 @@ set (SOURCES
 	src/Main.cpp)
 source_group ("Sources" FILES ${SOURCES})
 
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 add_executable (stereoscopic-test ${SOURCES} ${SHADERS})
 
-target_link_libraries (stereoscopic-test opengl32 glew32s glfw3 SDL2 SDL2main)
+if (${OPENGL_FOUND})
+	message("Found OpenGL ${OPENGL_INCLUDE_DIR} ${OPENGL_LIBRARIES}")
+endif()
+
+if (${GLEW_FOUND})
+	message("Found GLEW ${GLEW_INCLUDE_DIR} ${GLEW_LIBRARIES}")
+endif()
+
+if (${GLFW_FOUND})
+	message("Found GLFW ${GLFW_INCLUDE_DIR} ${GLFW_LIBRARIES}")
+endif()
+
+if (${SDL2_FOUND})
+	message ("Found SDL2 ${SDL2_INCLUDE_DIR} ${SDL2_LIBRARY}")
+endif()
+
+target_link_libraries (stereoscopic-test ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${GLFW_LIBRARIES}
+		${SDL2_LIBRARY})
 
 file(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_BINARY_DIR})
