Track obj file path
- Load mtl file within obj file path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ set (SOURCES
 	src/Texture.cpp
 	src/Model.h
 	src/Model.cpp
+	src/Ifstream.h
+	src/Ifstream.cpp
 	src/Material.h
 	src/Material.cpp
 	src/Mesh.h
