--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -1,3 +1,5 @@
 #define SST_VERSION_MAJOR @SST_VERSION_MAJOR@
 #define SST_VERSION_MINOR @SST_VERSION_MINOR@
 #define SST_TITLE "@SST_TITLE@"
+#cmakedefine SST_LOGGING
+#cmakedefine SST_PROFILING
