--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "soil"]
 	path = soil
 	url = https://github.com/kbranigan/Simple-OpenGL-Image-Library.git
+[submodule "mathspot"]
+	path = mathspot
+	url = https://github.com/Fahien/mathspot.git
