Improve Data Layer
- Add DataSpoT as submodule
- Load config from database
- Load Entities from database
- Call init function in scripts

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pyspot"]
 	path = pyspot
 	url = https://github.com/Fahien/pyspot.git
+[submodule "dataspot"]
+	path = dataspot
+	url = https://github.com/Fahien/dataspot.git
