Physically Based Rendering
- Add GltfSpoT module
- Implement GltfRenderer
- Improve fragment shader
- Gltf integration test

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "logspot"]
 	path = logspot
 	url = https://github.com/Fahien/logspot
+[submodule "gltfspot"]
+	path = gltfspot
+	url = https://github.com/Fahien/gltfspot.git
